hphp/hack/test/typecheck/pending_switch11.php.exp
File "pending_switch11.php", line 7, characters 12-13:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
